05-k8s-manifests/ingress/ingress-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    metallb.io/ip-allocated-from-pool: yc-pool
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 51.250.10.227
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
